<resources>
    <string name="app_name">Calculator</string>

    <string name="pick_two">Enter two numbers:</string>
    <string name="action_settings">Settings</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">*</string>
    <string name="divide_sign">/</string>
    <string name="result">The result</string>
    <string name="clear">clr</string>
</resources>
